--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <div class="result-desc">(실제 견적과 상이할 수 있습니다.)</div>
          계약금+호텔 (한국에서 입금하실 금액): 
     <span id="contractPrice" class="result-big"></span><br>
-  잔금 (현지에서 달러 지불하실 금액): 
+  잔금 (현지에서 지불하실 금액): 
     <span id="usdPrice" class="result-big"></span>
 </div>
       <div class="contact-section">
