--- a/index5.html
+++ b/index5.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>비엔티안(1박) - 루앙프라방(2박) C-Pack 빠른견적</title>
+  <title>비엔티안(1박) 루앙프라방(2박) C-Pack 빠른견적</title>
   <meta name="viewport" content="width=480,user-scalable=no">
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
