--- a/index5.html
+++ b/index5.html
@@ -127,6 +127,7 @@
           <div class="toggle-btn" data-guide="local" data-price="0">현지인 가이드<br><span style="font-size:0.91em; color:#55c;">추가요금 없음</span></div>
         </div>
       </div>
+      <div class="section">
        <label>숙박팩</label>
           <div>
             <button type="button" class="room-single-btn" onclick="addSingleRoom()">싱글룸 추가</button>
