--- a/index4.html
+++ b/index4.html
@@ -2,24 +2,33 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>비루방방 (비엔티안1박 루앙프라방1박 방비엥2박) C-Pack 빠른견적</title>
-  <meta name="viewport" content="width=480,user-scalable=no">
+  <title>비엔티안(1박) 루앙프라방(2박) C-Pack 빠른견적</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
     (function(){ emailjs.init('luKxEKdyyvY4hjYfo'); })();
   </script>
   <style>
     html { font-size:15px;}
-    body { font-family: 'Pretendard', 'Noto Sans KR', Arial, sans-serif; background: #f7f7fa; margin: 0; padding: 0; color: #222; font-size:1rem;}
-    .container { max-width: 880px; margin:32px auto; padding: 24px; background: #fff; border-radius: 18px; box-shadow: 0 2px 14px rgba(70, 85, 110, 0.12); }
-
+    body { font-family: 'Pretendard', 'Noto Sans KR', Arial, sans-serif; background: #f7f7fa; margin: 0; padding: 0; color: #222; font-size:1rem; overflow-x:hidden;}
+    .container {
+      width: 100%;
+      max-width: 880px;
+      margin:32px auto;
+      padding: 24px 16px;
+      background: #fff;
+      border-radius: 18px;
+      box-shadow: 0 2px 14px rgba(70, 85, 110, 0.12);
+      box-sizing: border-box;
+      overflow-x: hidden;
+    }
     .form-grid { display: flex; flex-wrap: wrap; gap: 32px; }
     .form-col { flex: 1 1 0; min-width: 0; display: flex; flex-direction: column; gap: 0; }
-    .form-col.left { min-width: 300px; flex-basis: 48%; }
-    .form-col.right { min-width: 300px; flex-basis: 48%; }
+    .form-col.left { min-width: 320px; flex-basis: 48%; }
+    .form-col.right { min-width: 320px; flex-basis: 48%; }
 
     .section, .date-section, .result-section, .contact-section { margin-bottom: 24px; }
-    h1 { font-size: 1.25rem; font-weight: bold; text-align: center; margin-bottom: 24px; color: #14508e; letter-spacing: -1px;}
+    h1 { font-size: 1.38rem; font-weight: bold; text-align: center; margin-bottom: 24px; color: #14508e; letter-spacing: -1px;}
     .result-section .result-title { font-size: 1.21em; font-weight: bold; color: #17508e; margin-bottom: 2px;}
     .result-section .result-desc { font-size: 0.95em; color: #989898; margin-bottom: 10px;}
     .result-section .result-big { font-size: 1.5em; font-weight: 700; color: #d02b2b; margin-left: 3px;}
@@ -82,14 +91,7 @@
       .container { max-width: 99vw; padding: 7vw 2vw;}
       .form-grid { flex-direction: column; gap: 0;}
       .form-col.left, .form-col.right { flex-basis: 100%; min-width: 0;}
-      .result-section .result-title { font-size: 1.35em;}
-      .result-section .result-desc { font-size: 1.10em;}
-      .result-section .result-big { font-size: 1.8em;}
-      h1 {font-size: 1.38rem;}
-      .section label, .contact-label, .date-label { font-size:1.23em;}
-      .toggle-btn, .init-btn, .room-single-btn { font-size: 1.15em;}
-      .option-row { font-size:1.16em; min-height:34px;}
-      .contact-input { font-size:1.13em;}
+      h1 {font-size: 1.18rem;}
     }
     @media (max-width: 700px) {
       .option-row.selected .option-unit {display:flex;align-items:center;justify-content:flex-end;}
@@ -105,7 +107,7 @@
 </head>
 <body>
 <div class="container" id="cpack-quickform">
-  <h1>비루방방 (비엔티안1박 루앙프라방1박 방비엥2박) C-Pack 빠른견적</h1>
+  <h1>비엔티안(1박) - 루앙프라방(2박) C-Pack 빠른견적</h1>
   <div class="form-grid">
     <div class="form-col left">
       <div class="date-section">
@@ -116,23 +118,16 @@
         </div>
       </div>
       <div class="section">
-        <label>여행인원 <span style="font-weight:400; color:#999; font-size:0.92em;">(2~8명, 예약금 인당 80,000원)</span></label>
+        <label>여행인원 <span style="font-weight:400; color:#999; font-size:0.92em;">(2~8명, 예약금 인당 60,000원)</span></label>
         <div class="toggle-group" id="personToggleGroup"></div>
         <div class="person-desc">9명 이상 단체 할인 적용 가능, <b>개별 문의</b></div>
       </div>
       <div class="section">
         <label>가이드팩 <span style="font-weight:400; color:#999; font-size:0.92em;">(단일 선택)</span></label>
         <div class="toggle-group" id="guideToggleGroup">
-          <div class="toggle-btn selected" data-guide="kr" data-price="280">한국인 가이드<br><span style="font-size:0.91em;">$280/팀</span></div>
+          <div class="toggle-btn selected" data-guide="kr" data-price="220">한국인 가이드<br><span style="font-size:0.91em;">$220/팀</span></div>
           <div class="toggle-btn" data-guide="local" data-price="0">현지인 가이드<br><span style="font-size:0.91em; color:#55c;">추가요금 없음</span></div>
         </div>
-      </div>
-      <div class="section">
-        <div class="section-label-row">
-          <label>선택관광 (방비엥)</label>
-          <button type="button" class="init-btn" onclick="resetVangvieng()">초기화</button>
-        </div>
-        <div class="option-list" id="vangviengList"></div>
       </div>
       <div class="section">
         <div class="section-label-row">
@@ -153,7 +148,6 @@
         </div>
         <div class="option-list" id="roomList"></div>
       </div>
-      <!-- 루앙프라방 선택관광 -->
       <div class="section">
         <div class="section-label-row">
           <label>선택관광 (루앙프라방)</label>
@@ -184,16 +178,8 @@
 <script>
 // 옵션 데이터
 const MAX_PERSON = 8;
-const contractPerPerson = 80000;
-const extraUsdByPerson = {8:135,7:149,6:167,5:193,4:232,3:297,2:428};
-const vangviengOptions = [
-  {name: "열기구", price: 100},
-  {name: "페러모터", price: 85},
-  {name: "버기카", price: 18},
-  {name: "짚라인", price: 20},
-  {name: "롱테일보트", price: 10},
-  {name: "시크릿라군", price: 10}
-];
+const contractPerPerson = 60000;
+const extraUsdByPerson = {8:145,7:156,6:170,5:190,4:221,3:271,2:371};
 const careOptions = [
   {name: "베트남식 이발관 풀코스 (90분)", price: 30},
   {name: "라오 허벌 테라피", price: 40},
@@ -203,12 +189,15 @@ const careOptions = [
   {name: "라오 오일 마사지 (1시간)", price: 20}
 ];
 const luangOptions = [
-  {name: "루앙프라방 선셋크루즈", price: 20},
-  {name: "루앙프라방 이른새벽 투어", price: 10}
+  {name: "루앙 골목 자전거 투어", price: 20},
+  {name: "루앙프라방 쿠킹클래스(런치)", price: 40},
+  {name: "루앙프라방 쿠킹클래스 (디너)", price: 35},
+  {name: "뽕나무 전통 종이 공예 체험", price: 15},
+  {name: "빡우 마을 투어 (빡우 동굴 포함)", price: 20}
 ];
 const roomOptions = [
-  {name: "5성급 4박", price: 375000},
-  {name: "4성급 4박", price: 249000},
+  {name: "5성급 3박", price: 300000},
+  {name: "4성급 3박", price: 248000},
   {name: "제가 예약할게요", price: 0}
 ];
 
@@ -224,11 +213,9 @@ for(let i=2; i<=MAX_PERSON; i++) {
     document.querySelectorAll("#personToggleGroup .toggle-btn").forEach(b=>b.classList.remove("selected"));
     btn.classList.add("selected");
     personCount = i;
-    vangviengPersons = vangviengPersons.map((v,idx)=>vangviengChecked[idx]?personCount:0);
     carePersons = carePersons.map((v,idx)=>careChecked[idx]?personCount:0);
     luangPersons = luangPersons.map((v,idx)=>luangChecked[idx]?personCount:0);
     updateRoomList();
-    renderVangviengList();
     renderCareList();
     renderLuangList();
     updateTotal();
@@ -239,7 +226,7 @@ for(let i=2; i<=MAX_PERSON; i++) {
 
 // 가이드팩
 let guideType = "kr";
-let guidePrice = 280;
+let guidePrice = 220;
 document.querySelectorAll("#guideToggleGroup .toggle-btn").forEach(btn=>{
   btn.onclick = function(){
     document.querySelectorAll("#guideToggleGroup .toggle-btn").forEach(b=>b.classList.remove("selected"));
@@ -250,62 +237,6 @@ document.querySelectorAll("#guideToggleGroup .toggle-btn").forEach(btn=>{
     sendHeightToParent();
   }
 });
-
-// ===== 선택관광(방비엥) =====
-const vangviengList = document.getElementById("vangviengList");
-let vangviengChecked = Array(vangviengOptions.length).fill(false);
-let vangviengPersons = Array(vangviengOptions.length).fill(0);
-function renderVangviengList() {
-  vangviengList.innerHTML = "";
-  vangviengOptions.forEach((opt, idx) => {
-    const row = document.createElement("div");
-    row.className = "option-row" + (vangviengChecked[idx] ? " selected" : "");
-    row.style.cursor = "pointer";
-    row.onclick = function(){
-      vangviengChecked[idx] = !vangviengChecked[idx];
-      vangviengPersons[idx] = vangviengChecked[idx] ? personCount : 0;
-      renderVangviengList();
-      updateTotal();
-      sendHeightToParent();
-    };
-    const title = document.createElement("div");
-    title.className = "option-title";
-    title.innerText = opt.name;
-    row.appendChild(title);
-
-    const unit = document.createElement("div");
-    unit.className = "option-unit";
-    if(vangviengChecked[idx]) {
-      unit.innerHTML = `<span>$${vangviengPersons[idx]*opt.price} / ${vangviengPersons[idx]}명</span>`;
-      const minusBtn = document.createElement("button");
-      minusBtn.type = "button";
-      minusBtn.className = "option-minus-btn";
-      minusBtn.innerText = "-1명";
-      minusBtn.onclick = function(e){
-        vangviengPersons[idx] = Math.max(0, vangviengPersons[idx]-1);
-        if(vangviengPersons[idx]===0) {
-          vangviengChecked[idx]=false;
-        }
-        renderVangviengList();
-        updateTotal();
-        sendHeightToParent();
-        e.stopPropagation();
-      };
-      unit.appendChild(minusBtn);
-    } else {
-      unit.innerHTML = `<span>$${opt.price}/인당</span>`;
-    }
-    row.appendChild(unit);
-    vangviengList.appendChild(row);
-  });
-}
-window.resetVangvieng = function(){
-  vangviengChecked = vangviengChecked.map(()=>false);
-  vangviengPersons = vangviengPersons.map(()=>0);
-  renderVangviengList();
-  updateTotal();
-  sendHeightToParent();
-}
 
 // ===== 선택관광(케어팩) =====
 const careList = document.getElementById("careList");
@@ -501,16 +432,17 @@ function updateTotal(){
   let roomPrice = (selectedRoomIdx !== null) ? roomOptions[selectedRoomIdx].price : 0;
   if(selectedRoomIdx !== null && roomPrice>0) contract += totalRooms*roomPrice;
   let usd = 0;
-  if(guideType==="kr") usd += 280;
-  vangviengOptions.forEach((opt, idx) => { usd += vangviengPersons[idx]*opt.price; });
+  if(guideType==="kr") usd += 220;
   careOptions.forEach((opt, idx) => { usd += carePersons[idx]*opt.price; });
   luangOptions.forEach((opt, idx) => { usd += luangPersons[idx]*opt.price; });
   let extraUsd = extraUsdByPerson[personCount] ? extraUsdByPerson[personCount] * personCount : 0;
-  usd += extraUsd;
+  usd = extraUsd;
+  careOptions.forEach((opt, idx) => { usd += carePersons[idx]*opt.price; });
+  luangOptions.forEach((opt, idx) => { usd += luangPersons[idx]*opt.price; });
+  if(guideType==="kr") usd += 220;
   document.getElementById("contractPrice").innerText = contract.toLocaleString()+"원";
   document.getElementById("usdPrice").innerText = "$"+usd.toLocaleString();
 }
-renderVangviengList();
 renderCareList();
 renderLuangList();
 updateRoomList();
@@ -527,8 +459,7 @@ function submitEstimate() {
   if(!name) { alert("대표자 성함을 입력해주세요."); document.getElementById("contactName").focus(); return;}
   if(!phone) { alert("연락 가능한 번호 또는 카카오톡 ID를 입력해주세요."); document.getElementById("contactPhone").focus(); return;}
   let persons = personCount + "명";
-  let guide = guideType === "kr" ? "한국인 가이드 ($280/팀)" : "현지인 가이드 (추가요금 없음)";
-  let vangStr = vangviengOptions.map((opt, i)=> vangviengPersons[i]>0? `${opt.name} (${vangviengPersons[i]}명)`:'').filter(Boolean).join(', ') || '없음';
+  let guide = guideType === "kr" ? "한국인 가이드 ($220/팀)" : "현지인 가이드 (추가요금 없음)";
   let careStr = careOptions.map((opt, i)=> carePersons[i]>0? `${opt.name} (${carePersons[i]}명)`:'').filter(Boolean).join(', ') || '없음';
   let luangStr = luangOptions.map((opt, i)=> luangPersons[i]>0? `${opt.name} (${luangPersons[i]}명)`:'').filter(Boolean).join(', ') || '없음';
   let baseRoomCnt = Math.ceil(personCount/2);
@@ -544,7 +475,6 @@ function submitEstimate() {
     phone: phone,
     persons: persons,
     guide: guide,
-    vangvieng: vangStr,
     care: careStr,
     luang: luangStr,
     room: roomStr,
