--- a/index4.html
+++ b/index4.html
@@ -10,9 +10,8 @@
   </script>
   <style>
     html { font-size:15px;}
-    body { font-family: 'Pretendard', 'Noto Sans KR', Arial, sans-serif; background: #f7f7fa; margin: 0; padding: 0; color: #222; font-size:1rem; overflow-x:hidden;}
+    body { font-family: 'Pretendard', 'Noto Sans KR', Arial, sans-serif; background: #f7f7fa; margin: 0; padding: 0; color: #222;}
     .container {
-      width: 100%;
       max-width: 880px;
       margin:32px auto;
       padding: 24px 16px;
@@ -20,19 +19,27 @@
       border-radius: 18px;
       box-shadow: 0 2px 14px rgba(70, 85, 110, 0.12);
       box-sizing: border-box;
-      overflow-x: hidden;
+      overflow: visible;
     }
-    .form-grid { display: flex; flex-wrap: wrap; gap: 32px; }
-    .form-col { flex: 1 1 0; min-width: 0; display: flex; flex-direction: column; gap: 0; }
-    .form-col.left { min-width: 320px; flex-basis: 48%; }
-    .form-col.right { min-width: 320px; flex-basis: 48%; }
-
+    .form-grid {
+      display: flex;
+      gap: 32px;
+    }
+    .form-col {
+      display: flex;
+      flex-direction: column;
+      gap: 0;
+      min-width: 0;
+    }
+    .form-col.left, .form-col.right {
+      flex: 0 0 48%;
+      min-width: 320px;
+    }
     .section, .date-section, .result-section, .contact-section { margin-bottom: 24px; }
-    h1 { font-size: 1.38rem; font-weight: bold; text-align: center; margin-bottom: 24px; color: #14508e; letter-spacing: -1px;}
+    h1 { font-size: 1.38rem; font-weight: bold; text-align: center; margin-bottom: 24px; color: #14508e;}
     .result-section .result-title { font-size: 1.21em; font-weight: bold; color: #17508e; margin-bottom: 2px;}
     .result-section .result-desc { font-size: 0.95em; color: #989898; margin-bottom: 10px;}
     .result-section .result-big { font-size: 1.5em; font-weight: 700; color: #d02b2b; margin-left: 3px;}
-
     .section-label-row { display:flex; align-items:center; justify-content:space-between; margin-bottom:8px;}
     .section label { font-weight: 700; font-size: 1.01rem; color: #294a6b;}
     .person-desc { color:#b04d0c; font-size:0.95em; margin-top:5px; margin-bottom:-12px; font-weight:700;}
@@ -66,10 +73,7 @@
     }
     .option-row.selected .option-minus-btn { margin-left: 18px; }
     .option-minus-btn:active {background:#c9e2ff;}
-    .room-total { margin-left:8px; color:#d02b2b; font-size:1em;}
-    .total-label { color: #ffe400; margin-left:8px; font-size:1em;}
-    .section .init-btn, .section .room-single-btn { font-weight:700;}
-    .section-label-row { gap:10px;}
+    .room-single-btn, .init-btn, .submit-btn, .contact-input { width: 100%; box-sizing: border-box;}
     .room-single-btn {background:#fff7e0; color:#b26c18; border:1px solid #edd59c; font-size:1em; border-radius:7px; padding:6px 16px; margin-right:7px; cursor:pointer;}
     .room-single-btn:active {background:#ffeec4;}
     .init-btn { font-size:1em; background:#e5eefe; border:1px solid #bdd2ea; border-radius:8px; color:#347; padding:6px 15px; cursor:pointer; margin-left:0;}
@@ -77,9 +81,9 @@
     .result-section { margin: 20px 0 17px 0; padding: 13px 7px 8px 7px; background: #f4f6fa; border-radius: 12px; text-align: center; font-size: 1.07em; color: #14508e; font-weight: 600;}
     .contact-section { margin-bottom: 20px; background: #f9fafb; border-radius: 12px; padding: 12px 8px 7px 8px;}
     .contact-label { display: block; margin: 10px 0 5px 2px; color: #37629d; font-size: 1.06em; font-weight: 700;}
-    .contact-input { width: 100%; padding: 8px 8px; border: 1px solid #bfd2e9; border-radius: 8px; font-size: 1.02em; margin-bottom: 3px; box-sizing: border-box; background: #f7fafc; font-family: 'Pretendard', 'Noto Sans KR', Arial, sans-serif; font-weight:700;}
+    .contact-input { padding: 8px 8px; border: 1px solid #bfd2e9; border-radius: 8px; font-size: 1.02em; margin-bottom: 3px; background: #f7fafc; font-family: 'Pretendard', 'Noto Sans KR', Arial, sans-serif; font-weight:700;}
     textarea.contact-input { font-family: 'Pretendard', 'Noto Sans KR', Arial, sans-serif !important; resize: vertical;}
-    .submit-btn { display: block; width: 100%; background: linear-gradient(90deg, #1466b6 88%, #25a6d1 100%); color: #fff; border: none; border-radius: 12px; padding: 15px 0; font-size: 1.12em; font-weight: 800; margin-top: 22px; cursor: pointer; transition: background 0.15s; letter-spacing: 0.5px; box-shadow: 0 2px 10px #4176a72c;}
+    .submit-btn { display: block; background: linear-gradient(90deg, #1466b6 88%, #25a6d1 100%); color: #fff; border: none; border-radius: 12px; padding: 15px 0; font-size: 1.12em; font-weight: 800; margin-top: 22px; cursor: pointer; transition: background 0.15s; letter-spacing: 0.5px; box-shadow: 0 2px 10px #4176a72c;}
     .submit-btn:active { background: #2a8ad1;}
     .date-section {margin-bottom:22px;}
     .date-label {font-weight:700; color:#294a6b; font-size:1.14em; margin-bottom:10px; display:block;}
